added users model
