# openapi/openapi.yaml
@@ -3,6 +3,38 @@ info:
   title: API
   version: 1.0.0
 paths:
+  /users:
+    get:
+      summary: Get all users 
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user 
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user 
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
   /tasks:
     get:
       summary: Get all tasks
@@ -49,7 +81,7 @@ paths:
             type: integer
             format: uint
       responses:
-        '204':
+        '200':
           description: Task successfully deleted
           content:
             application/json:
@@ -102,3 +134,13 @@ components:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint # так как в БД айди это только положительные числа.
+        email:
+          type: string
+        password:
+          type: string 
